<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperShop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="good_info">尺码参数</string>
    <string name="good_comment">累计评价</string>
    <string name="good_pic_detail">图文详情</string>
    <string name="detail_comment_text">评论</string>
    <string name="more_comments">更多评论</string>
    <string name="detail_comment_post_text">发表</string>
    <string name="goods_detail_params_text">产品参数</string>
    <string name="beauty_detail_word_with_pic_title">图文详情</string>
    <string name="total_rate">累计评价</string>
    <string name="connect">私聊</string>
    <string name="note_social_share">分享</string>
    <string name="recommend_yd_text">本店推荐:</string>
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_in_register"><b>登录</b></string>
    <string name="login_progress_signing_in">正在登录…</string>
    <string name="login_title">账号登录</string>
    <string name="captcha_notice">验证码：点击下方图片，旋转到正确位置</string>
    <string name="captcha_refresh">换一组</string>
    <string name="im_unavailable_login">登陆异常，请稍后重试～</string>
    <string name="login">登 录</string>
    <string name="is_pwd_forgen">忘记密码?</string>
    <string name="world_login_title">帮助</string>
    <string name="country_area">国家和地区</string>
    <string name="default_country_name">中国</string>
    <string name="country_num_prefix">+</string>
    <string name="default_country_num">86</string>
    <string name="phone_register_text_hint">请输入手机号码</string>
    <string name="enter_password">请输入密码</string>
    <string name="change">换一下</string>
    <string name="register">注 册</string>
    <string name="search">搜索</string>
    <string name="search_goods_text_">商品</string>
    <string name="search_clear_history">清空历史搜索</string>
    <string name="search_hot">热门搜索:</string>
    <string name="search_history">搜索历史:</string>
    <string name="goto_shop">进入店铺</string>
    <string name="user_info_avatar_text_">头像</string>
    <string name="user_info_nick_name_text">昵称</string>
    <string name="user_info_gender_text">性别</string>
    <string name="user_info_phone_text">手机号</string>
    <string name="user_info_signature_text_">个性签名</string>
    <string name="user_info_background_text">更换背景</string>
    <string name="user_info_address_text">收货地址</string>
    <string name="shop_tab_default">默认</string>
    <string name="shop_tab_latest">最新</string>
    <string name="shop_tab_price">价格</string>
    <string name="shop_tab_sales">销量</string>
    <string name="index_search">找商品、用户、店铺</string>

</resources>