<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/message_listview_bk_color" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40.0dip"
                android:src="@drawable/im" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingLeft="40.0dip"
                    android:singleLine="true"
                    android:textColorHint="@color/txt_hint_color"
                    android:textSize="20.0sp" />

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_alignBottom="@+id/name"
                    android:layout_alignLeft="@+id/name"
                    android:layout_alignTop="@+id/name"
                    android:paddingLeft="10.0dip"
                    android:src="@drawable/im_login_user" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:background="@drawable/im_message_text_bg"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="normal|actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="40.0dip"
                    android:singleLine="true"
                    android:textColorHint="@color/txt_hint_color"
                    android:textSize="20.0sp" />

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_alignBottom="@+id/password"
                    android:layout_alignLeft="@+id/password"
                    android:layout_alignTop="@+id/password"
                    android:paddingLeft="10.0dip"
                    android:src="@drawable/im_login_pwd" />
            </RelativeLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="230.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50.0dip"
                android:background="@drawable/im_message_item_btn_bk"
                android:paddingLeft="32.0dip"
                android:paddingRight="32.0dip"
                android:text="@string/action_sign_in_register"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@color/half_transparent_light"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

</merge>