<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip" >

        <ImageView
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:scaleType="center"
            android:src="@drawable/back_btn_black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="50.0dip"
            android:paddingRight="50.0dip" >

            <TextView
                android:id="@+id/good_pic_detail"
                android:layout_width="0.0dip"
                android:layout_height="29.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/shopinfo_tab_left_bg"
                android:gravity="center"
                android:text="@string/good_pic_detail"
                android:textColor="@color/shop_info_tab_text_bg"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/good_info"
                android:layout_width="0.0dip"
                android:layout_height="29.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/shopinfo_tab_center_bg"
                android:gravity="center"
                android:text="@string/good_info"
                android:textColor="@color/shop_info_tab_text_bg"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/good_comment"
                android:layout_width="0.0dip"
                android:layout_height="29.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/shopinfo_tab_right_bg"
                android:gravity="center"
                android:text="@string/good_comment"
                android:textColor="@color/shop_info_tab_text_bg"
                android:textSize="14.0sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/app_stroke_color1" />

    <android.support.v4.view.ViewPager
        android:id="@+id/good_info_pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>