<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="15.0dip"
    android:paddingRight="15.0dip" >

    <RelativeLayout
        android:id="@+id/goods_detail_params_panel"
        android:layout_width="fill_parent"
        android:layout_height="49.0dip" >

        <TextView
            android:id="@+id/goods_detail_params_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/goods_detail_params_icon"
            android:drawablePadding="11.0dip"
            android:gravity="center_vertical"
            android:text="@string/goods_detail_params_text"
            android:textColor="@color/official_text0"
            android:textSize="15.0sp" />

        <View
            android:id="@+id/goods_detail_params_arrow"
            android:layout_width="8.5dip"
            android:layout_height="14.5dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/grey_arrow_icon" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_alignParentBottom="true"
            android:background="@color/app_stroke_color2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/goods_detail_word_with_pic_panel"
        android:layout_width="fill_parent"
        android:layout_height="54.0dip" >

        <TextView
            android:id="@+id/goods_detail_word_with_pic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/beauty_detail_word_with_pic_icon"
            android:drawablePadding="11.0dip"
            android:gravity="center_vertical"
            android:text="@string/beauty_detail_word_with_pic_title"
            android:textColor="@color/official_text0"
            android:textSize="15.0sp" />

        <View
            android:id="@+id/goods_detail_word_with_pic_arrow"
            android:layout_width="8.5dip"
            android:layout_height="14.5dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/grey_arrow_icon" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_alignParentBottom="true"
            android:background="@color/app_stroke_color2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/goods_detail_comment_total_panel"
        android:layout_width="fill_parent"
        android:layout_height="49.0dip" >

        <TextView
            android:id="@+id/goods_detail_comment_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/beauty_detail_comment_total_icon"
            android:drawablePadding="11.0dip"
            android:gravity="center_vertical"
            android:text="@string/total_rate"
            android:textColor="@color/official_text0"
            android:textSize="15.0sp" />

        <View
            android:id="@+id/goods_detail_comment_total_arrow"
            android:layout_width="8.5dip"
            android:layout_height="14.5dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/grey_arrow_icon" />

        <TextView
            android:id="@+id/goods_detail_sell_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:layout_toLeftOf="@+id/goods_detail_comment_total_arrow"
            android:textColor="@color/official_text4"
            android:textSize="15.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rate_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>